--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .flexible{
     display: flex;
-    margin-bottom: 100px;
-    margin-top: 50px;
+    margin-bottom: 150px;
+    margin-top: 0px;
 }
 
 .half-width{
@@ -12,6 +12,7 @@
 }
 .img-1{
     margin-top: 90px;
+    width: 580px;
 }
 .skip{
     font-size: 60px;
@@ -30,6 +31,7 @@
     font-family: 'Source Sans Pro', sans-serif;
     margin-left: 70px;
     font-size: 20px;
+    margin-bottom: 50px;
 }
 
 
@@ -40,9 +42,13 @@
     padding: 18px 33px;
     border-radius: 40px;
     font-size: 19px;
-    position: relative;left: 100px;top: 50px;
-    font-family: 'Maven Pro', sans-serif;
     
+    margin-left: 60px;
+    font-family: 'Maven Pro', sans-serif;
+    margin-bottom: 
+}
+.contact-me{
+    margin-left: 40px;
 }
 .about-sec{
     margin-top: 100px;
@@ -57,6 +63,7 @@
     margin-top: 100px;
     margin-left: 40px;
 
+
 }
 .img2{
     margin-left: 100px;
@@ -68,6 +75,7 @@
     margin-left: 40px;
     margin-right: 60px;
     margin-top: 20px;
+    margin-bottom: 50px;
     font-size: 20px;
     text-align: justify;
 }
@@ -121,4 +129,50 @@
     color: black;
 
 
+}
+.follower{
+    margin-left: 100px;
+    margin-right: 100px;
+    box-shadow: 10px 10px 40px rgb(230, 227, 227);
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    text-align: center;
+    margin-bottom: 100px;
+    border-radius: 20px;
+    padding-bottom: 20px;
+    
+    
+}
+.amount{
+    font-family: 'Maven Pro', sans-serif;
+    color: black;
+    font-size: 50px;
+}
+.media{
+    font-family: 'Source Sans Pro', sans-serif;
+    color: gray;
+}
+.footer{
+    background-color: rgb(19, 18, 18);
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 50px;
+    
+}
+.footer-title{
+    color: gray;
+    font-family: 'Maven Pro', sans-serif;
+    font-size: 40px;
+    margin-top: 50px;
+
+}
+.footer-p{
+    color: white;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 200;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+.foot-sec{
+    
 }
